[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/SciFi_Warehouse_B2.png" type="Texture" id=1]
[ext_resource path="res://World/Props/PoisonMushroom.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 479, 6, 40, 40 )

[sub_resource type="CircleShape2D" id=2]
radius = 45.3156

[node name="PoisonMushroom" type="StaticBody2D"]
scale = Vector2( 2, 2 )
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.12167, -12.508 )
texture = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 3.12167, -12.508 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.78583, 1.5874 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 3.12167, -12.508 )
polygon = PoolVector2Array( -6.47199, 12.2337, -5.08301, 19.7738, 1.76266, 19.9723, 0.175255, 11.7376 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
